# ghost

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
ghost/: agent_utils.py  app.py  base.py  prompt.py  unsolicited_message.py  utils.py
ghost/fine_tuning/: README.md  inference.py  iphone_sqlite.py  sample_records.py  sampling_utils.py
ghost/fine_tuning/notebooks/: fine_tune.ipynb  sample_records.ipynb
ghost/settings/: README.md  contacts.json  prompt_prefix.md
ghost/tests/: utils.py
ghost/tests/integration_tests/: test_app_with_llm.py  test_sample_records.py  test_unsolicited_message.py
ghost/tests/unit_tests/: test_app.py  test_fine_tune_inference.py  test_iphone_sqlite.py  test_unsolicited_message.py  test_unsolicited_message_utils.py
