[tool.poetry]
name = "ghost"
version = "0.1.0"
description = "Create an AI replica of yourself that is accessible via SMS."
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ccurme/ghost"

[tool.poetry.dependencies]
python = ">= 3.9, < 4.0"
ipython = "^8.8.0"
langchain = ">= 0.0.134, < 1.0"
tiktoken = ">= 0.3.0, < 1"
faiss-cpu = ">= 1.7.3, < 2"
openai = ">= 0.27.0"
flask = ">= 2.2.3,< 3.0"
twilio = ">= 8.0.0, < 9.0"
PyJWT = " >= 2.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.isort]
profile = "black"
src_paths = ["ghost"]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["tests"]
